ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-demo
  namespace: default
  annotations:
    ingress.alb.yc.io/subnets: ddkgdejub6sg999mbh2o ### Подсети, где размещается ALB и принимается трафик. Обязательно к заполнению
    ingress.alb.yc.io/external-ipv4-address: 46.243.144.225 ### Выдача публичного доступа к ALB. Варианты - auto/public ip address(заранее созданный). Обязателен к заполнению один из вариантов external-ipv4-address или internal-ipv4-address
    ingress.alb.yc.io/group-name: default ### Предназначен для объединения ресурсов kubernetes ingress в группы, каждая из которых обслуживается отдельным экземпляром балансировщика. Если не указано, то присваивается группа по умолчанию "default"
    ingress.alb.yc.io/protocol: grpc
spec:
  tls:
    - hosts:
        - grpc.av-cloudarch.site
      secretName: yc-certmgr-cert-id-b25trg5qr3eurt71t6m9 # Заменить хвост ID на сертификат ID из Certificate Manager
  rules:
    - host: grpc.av-cloudarch.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grpc-service
                port:
                  number: 80
